--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Aktuelno"
+    url: /aktuelno/
+  - title: "Izlozbe"
+    url: /izlozbe/
+  - title: "O nama"
+    url: /o-nama/
+  - title: "Knjiga o tkanju"
+    url: /knjiga/
+  - title: "Kontakt"
+    url: /kontakt/
